--- a/newamericadotorg/assets/react/report/components/Authors.scss
+++ b/newamericadotorg/assets/react/report/components/Authors.scss
@@ -12,20 +12,21 @@
     margin-bottom: 15px !important;
   }
 
-  &:hover{
+  &:not(.report__author-button--no-link):hover{
     box-shadow: 0px 1px 3px 0px color(black, base, 0.25);
     @include transform(translateY(-5px));
   }
 
-  a {
+  &__inner {
+    display: block;
     height: 110px;
     padding: 10px;
-  }
 
-  a:before {
-    content: '';
-    height: 100%;
-    width: 1px;
+    &:before {
+      content: '';
+      height: 100%;
+      width: 1px;
+    }
   }
 
   &__text, &__image, a:before {
