Sass-related npm updates
1. Prefer `sass` package to `node-sass` (the former is "dart sass," the latter is deprecated)
2. Update `sass-loader` to 9.0.2 (for `sass` compatibility)
3. Upgrade Webpack to 4.36 (lowest version allowed by sass-loader 9)
4. Upgrade to node 12 (needed for sass, sass-loader)
5. Fix sass errors and deprecation warnings related to use of dart sass

--- a/newamericadotorg/assets/scss/components/form/_radio.scss
+++ b/newamericadotorg/assets/scss/components/form/_radio.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 .checkbox {
   $root: &;
   $indicator-size: 12px;
@@ -91,8 +92,8 @@
     &::after {
       @include transition(all 0.15s linear);
       position: absolute;
-      $width: (2/3) * $indicator-size--checkbox;
-      $height: (1/3) * $indicator-size--checkbox;
+      $width: math.div(2, 3) * $indicator-size--checkbox;
+      $height: math.div(1, 3) * $indicator-size--checkbox;
       height: $height;
       width: $width;
       top: 0.5 * ($indicator-size--checkbox - (1.4 * $height));
