--- a/newamericadotorg/assets/scss/components/header/_dropdown.scss
+++ b/newamericadotorg/assets/scss/components/header/_dropdown.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 .header__nav__dropdown{
   float: left;
   // position: relative;
@@ -37,7 +38,7 @@
     @include transform(translateY(-10px));
     @include transition(transform 0.3s ease, opacity 0.3s ease, visibilty 0.3s ease);
     @include breakpoint($max-site-width){
-      @include transform(translateY(-10px) translateX(calc(-50vw + #{$max-site-width/2})));
+      @include transform(translateY(-10px) translateX(calc(-50vw + #{math.div($max-site-width, 2)})));
     }
 
     a {
@@ -98,7 +99,7 @@ body:not(.dropdown-active) .header__nav__dropdown:hover,
 
       @include transform(translateY(0px));
       @include breakpoint($max-site-width){
-        @include transform(translateY(0px) translateX(calc(-50vw + #{$max-site-width/2})));
+        @include transform(translateY(0px) translateX(calc(-50vw + #{math.div($max-site-width, 2)})));
       }
     }
 
