Add alt text to report story images in header
- Add field panel in admin
- Add to serializer
- Add to Image.js
- Change header image to be img instead of bg image

--- a/newamericadotorg/assets/react/report/components/Heading.scss
+++ b/newamericadotorg/assets/react/report/components/Heading.scss
@@ -92,10 +92,8 @@
 
 .card__image__background-image {
   flex-grow: 1;
-  background-color: #efefef;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  height: 0;
+  object-fit: cover;
 }
 
 .report__cover-image__source {
