--- a/in_depth/templates/in_depth/in_depth_section.html
+++ b/in_depth/templates/in_depth/in_depth_section.html
@@ -127,7 +127,7 @@
 		<section id="title-panel" class="in-depth__panel title-panel">
         <div class="title-panel__image">
             <div class="title-panel__image__background" style="background-image: url({{story_image_thumb.url}});"></div>
-            <img src="{{story_image.url}}" class="fade-in-image" onload="this.classList.add('loaded');document.querySelector('.title-panel__image__background').classList.add('loaded');">
+            <img src="{{story_image.url}}" alt="{{page.story_image_alt}}" class="fade-in-image" onload="this.classList.add('loaded');document.querySelector('.title-panel__image__background').classList.add('loaded');">
         </div>
         <div class="container">
   		    <div class="title-panel__text-box">
