Make dark turquoise have 4.5 contrast on white

--- a/newamericadotorg/assets/scss/_mixins.scss
+++ b/newamericadotorg/assets/scss/_mixins.scss
@@ -21,7 +21,7 @@ $colors: (
   turquoise: (
     base: #2ebcb3,
     light: #46ccc3,
-    dark: #2a8e88
+    dark: #25837D
   ),
   blue: (
     base: #10355F
