--- a/newamericadotorg/assets/react/report/components/EndnoteAside.scss
+++ b/newamericadotorg/assets/react/report/components/EndnoteAside.scss
@@ -109,7 +109,7 @@
 }
 
 .report__body__endnote a {
-  color: color(turquoise) !important;
+  color: color(turquoise, dark) !important;
 }
 
 .oti .report__body__endnote a {
