--- a/newamericadotorg/assets/react/report/components/TopNav.scss
+++ b/newamericadotorg/assets/react/report/components/TopNav.scss
@@ -116,7 +116,7 @@
     position: absolute;
     top: -9px;
     left: -9px;
-    background: color(turquoise);
+    background: color(turquoise, dark);
   }
 }
 
