--- a/newamericadotorg/assets/react/report/components/FeaturedSections.scss
+++ b/newamericadotorg/assets/react/report/components/FeaturedSections.scss
@@ -12,7 +12,7 @@
     @include transform(translateY(-5px));
 
     .circle-gray{
-      background-color: color(turquoise);
+      background-color: color(turquoise, dark);
       color: color(white);
     }
   }
