--- a/newamericadotorg/assets/scss/components/buttons/_button.scss
+++ b/newamericadotorg/assets/scss/components/buttons/_button.scss
@@ -121,12 +121,12 @@ button {
 	}
 
 	&.turquoise {
-		border: 1px solid color(turquoise, base, 1);
-		color: color(turquoise);
-		background: color(turquoise, base, 0);
+		border: 1px solid color(turquoise, dark, 1);
+		color: color(turquoise, dark);
+		background: color(turquoise, dark, 0);
 		&:hover{
 			color: color(white) !important;
-			background: color(turquoise, base, 1);
+			background: color(turquoise, dark, 1);
 		}
 	}
 }
