--- a/newamericadotorg/assets/scss/components/card/index.scss
+++ b/newamericadotorg/assets/scss/components/card/index.scss
@@ -67,7 +67,7 @@
       bottom: 0px;
       position: absolute;
       width: 105px;
-      border: 1.5px solid color(turquoise);
+      border: 1.5px solid color(turquoise, dark);
     }
   }
 
@@ -104,7 +104,7 @@
 
 :not(h2).card__text__title:hover u{
   display: inline;
-  background-image: linear-gradient(90deg,color(turquoise) 100%,transparent 0);
+  background-image: linear-gradient(90deg, color(turquoise) 100%, transparent 0);
   background-position: 0 1.04em;
   background-repeat: repeat-x;
   background-size: 100% 2px;
