Add underline to text links (inside a `p`)

--- a/newamericadotorg/assets/scss/base/_type.scss
+++ b/newamericadotorg/assets/scss/base/_type.scss
@@ -249,7 +249,6 @@ blockquote {
 }
 
 a {
-  text-decoration: none;
   font-weight: bold;
   font-size: inherit;
   line-height: inherit;
@@ -257,6 +256,10 @@ a {
 
   &:hover {
     color: color(black)
+  }
+
+  p & {
+    text-decoration: underline;
   }
 
   &.inline {
