--- a/newamericadotorg/assets/scss/_mixins.scss
+++ b/newamericadotorg/assets/scss/_mixins.scss
@@ -52,7 +52,7 @@ $colors: (
   ),
   gray: (
     base: #D5D5D5,
-    dark: #737378,
+    dark: #6F6F74,
     light: #C1C1C1,
     ultra-light: #f6f6f6
   ),
