--- a/newamericadotorg/assets/scss/components/buttons/_tag.scss
+++ b/newamericadotorg/assets/scss/components/buttons/_tag.scss
@@ -1,6 +1,6 @@
 .tag{
   border-radius: 2px;
-  color: color(gray, dark);
+  color: color(black);
   background: color(gray, light);
   padding: 0.25em 0.5em;
   display: inline-block;
