Make OTI-blue text darker

--- a/newamericadotorg/assets/scss/_mixins.scss
+++ b/newamericadotorg/assets/scss/_mixins.scss
@@ -35,7 +35,7 @@ $colors: (
   oti-blue: (
     base: #5da4da,
     light: #75bef4,
-    dark: #477da3
+    dark: #3B75A2
   ),
   red: (
     base: #e75c64,
