--- a/newamericadotorg/assets/scss/base/_initial.scss
+++ b/newamericadotorg/assets/scss/base/_initial.scss
@@ -93,3 +93,17 @@ section {
     background-color: color(beige);
   }
 }
+
+.skip-link {
+  position: fixed;
+  right: 105%;
+  top: 0.5em;
+  background-color: color(white);
+  padding: 0.5em;
+  &:hover, &:active, &:focus {
+    left: 0.5em;
+    right: auto;
+    box-shadow: 0 0 0 2px color(red);
+    z-index: 1000;
+  }
+}
