Remove mobile menu on desktop

--- a/newamericadotorg/assets/react/mobile-menu/index.scss
+++ b/newamericadotorg/assets/react/mobile-menu/index.scss
@@ -19,6 +19,12 @@
   }
 }
 
+#mobile-menu__wrapper {
+  @include media-breakpoint(desktop){
+    display: none;
+  }
+}
+
 #mobile-menu__wrapper.open {
   .mobile-menu {
     @include transform(translateX(-125vw));
