Make parents in mobile menu tabbable

--- a/newamericadotorg/templates/components/mobile-menu-icon.html
+++ b/newamericadotorg/templates/components/mobile-menu-icon.html
@@ -1,5 +1,5 @@
-<a class="mobile-menu-icon" id="mobile-menu-toggle">
+<button class="mobile-menu-icon" id="mobile-menu-toggle">
   <span></span>
   <span></span>
   <span></span>
-</a>
+</button>
