--- a/newamericadotorg/assets/react/mobile-menu/components/Menus.scss
+++ b/newamericadotorg/assets/react/mobile-menu/components/Menus.scss
@@ -9,12 +9,21 @@
     inset 0px -1px 0px 0px color(black, base, 0.1) !important;
   }
 
-  a {
+  a, button {
     padding-top: 27px;
     padding-bottom: 27px;
   }
 
-  &.tab-link a:after{
+  &.tab-link button{
+    font-weight: unset;
+    font-size: unset;
+    text-transform: unset;
+    letter-spacing: unset;
+    width: 100%;
+    text-align: left;
+  }
+
+  &.tab-link a:after, &.tab-link button:after{
     content: '';
     height: 10px;
     width: 10px;
