--- a/newamericadotorg/templates/components/header_dropdowns.html
+++ b/newamericadotorg/templates/components/header_dropdowns.html
@@ -1,8 +1,8 @@
 <div class="header__nav__dropdowns-wrapper">
   <div class="header__nav__dropdown">
-    <a class="header__nav__dropdown__header drop">
+    <button class="header__nav__dropdown__header drop">
       <h4 class="link inline"><span><u>Programs</u></span></h4>
-    </a>
+    </button>
     <div class="header__nav__dropdown__list-wrapper programs-dropdown">
       {% include './header_program_dropdown.html' %}
     </div>
@@ -23,9 +23,9 @@
     </a>
   </div>
   <div class="header__nav__dropdown">
-    <a class="header__nav__dropdown__header drop">
+    <button class="header__nav__dropdown__header drop">
       <h4 class="link inline"><span><u>About</u></span></h4>
-    </a>
+    </button>
     <div class="header__nav__dropdown__list-wrapper about-dropdown">
       {% include './header_about_dropdown.html' %}
     </div>
