--- a/newamericadotorg/templates/components/card_list.html
+++ b/newamericadotorg/templates/components/card_list.html
@@ -11,7 +11,7 @@
 <div class="card list {{post.content_type.model}}">
   <a href="{% firstof url post.url %}">
     <div class="card__image{% if not post_image %} no-image{%endif%}">
-      <img src="{{post_image.url}}" class="fade-in-image" onload="this.classList.add('loaded');"/>
+      <img src="{{post_image.url}}" alt="{{ post.story_image_alt }}" class="fade-in-image" onload="this.classList.add('loaded');"/>
     </div>
   </a>
   <div class="card__text">
