--- a/newamericadotorg/templates/blocks/image_block.html
+++ b/newamericadotorg/templates/blocks/image_block.html
@@ -27,20 +27,20 @@
     {% if value.open_image_on_click %}
       <a href="{{ img_original.url }}" target='_blank' >
         {% if value.use_original %}
-          <img src="{{img_original.url}}" class="original"/>
+          <img src="{{img_original.url}}" alt="{{ value.alt_text}}" class="original"/>
         {% elif value.width == 'width-full'%}
           <div class="figure__image__background-image" style="background-image: url({{ img.url }});"></div>
         {% else %}
-          <img src="{{img.url}}"/>
+          <img src="{{img.url}}" alt="{{ value.alt_text }}" />
         {% endif %}
       </a>
     {% else %}
       {% if value.use_original %}
-        <img src="{{img_original.url}}" class="original"/>
+        <img src="{{img_original.url}}" alt="{{ value.alt_text }}" class="original"/>
       {% elif value.width == 'width-full'%}
         <div class="figure__image__background-image" style="background-image: url({{ img.url }});"></div>
       {% else %}
-        <img src="{{img.url}}"/>
+        <img src="{{img.url}}" alt="{{value.alt_text}}"/>
       {% endif %}
     {% endif %}
   </div>
