--- a/newamericadotorg/templates/components/card_md.html
+++ b/newamericadotorg/templates/components/card_md.html
@@ -10,7 +10,7 @@
     <div class="col-6 col-md-12">
       <div class="card__image">
         <div class="card__image__background" style="background-image: url({{post_image_thumb.url}});"></div>
-        <img src="{{post_image_lg.url}}" class="fade-in-image" onload="this.classList.add('loaded');"/>
+        <img src="{{post_image_lg.url}}" alt="{{ post.story_image_alt }}" class="fade-in-image" onload="this.classList.add('loaded');"/>
       </div>
     </div>
     <div class="col-6 col-md-12">
