--- a/person/templates/person/person.html
+++ b/person/templates/person/person.html
@@ -17,7 +17,7 @@
             {% image page.profile_image original as og_profile_image %}
             {% image page.profile_image fill-300x300 as profile_image %}
             <a class="person-heading__image__link-wrapper" href="{{og_profile_image.url}}">
-              <img src="{{profile_image.url}}"></a>
+              <img src="{{profile_image.url}}" alt="{{ page.profile_image_alt }}"></a>
             </a>
           {% endif %}
           {% if page.topics.all|length > 0 %}
