--- a/report/templates/report/figure_iframe.html
+++ b/report/templates/report/figure_iframe.html
@@ -3,7 +3,7 @@
 <figure class="figure {{value.fallback_image_align}} {{value.fallback_image_width|temp_image_width_map}}">
 
   <div class="figure__image">
-      <img src="{{ value.fallback_image.file.url }}"/>
+      <img src="{{ value.fallback_image.file.url }}" alt="{{ value.fallback_image_alt_text }}"/>
   </div>
 
   {% if value.fallback_image.caption or value.fallback_image.source %}
