Add text for screenreaders to images in header without text

--- a/newamericadotorg/templates/components/header.html
+++ b/newamericadotorg/templates/components/header.html
@@ -6,6 +6,7 @@
     <div class="row no-gutters">
       <div class="header__logo-wrapper col-lg-2 col-11">
         <a href="/">
+          <div class="sr-only">New America</div>
           <div class="header__logo logo"></div>
         </a>
       </div>
