--- a/newamericadotorg/templates/components/header_search.html
+++ b/newamericadotorg/templates/components/header_search.html
@@ -9,6 +9,7 @@
     </div>
   </div>
   <button class="header__nav__search__icon">
+    <div class="sr-only">Search</div>
     {% include 'components/search-icon.html' %}
   </button>
 </div>
