Stop overrideing wagtail logo for now

--- a/newamericadotorg/templates/wagtailadmin/base.html
+++ b/newamericadotorg/templates/wagtailadmin/base.html
@@ -1,5 +1,5 @@
 {% extends "wagtailadmin/base.html" %}
 
-{% block branding_logo %}
+{% comment %} {% block branding_logo %}
     {% include 'components/svg/new-america-white.html' %}
-{% endblock %}
+{% endblock %} {% endcomment %}
