--- a/newamericadotorg/templates/blocks/iframe.html
+++ b/newamericadotorg/templates/blocks/iframe.html
@@ -2,7 +2,11 @@
 {% load noShowTableauHome from utilities %}
 
 {% widthratio self.height self.width 100 as height_width_ratio %}
-{% if self.responsive %}
+{% if self.fixed_height %}
+    <div class="wrapper--streamfield-block {{ self.column_width }}">
+        <iframe src="{{ self.source_url|noShowTableauHome }}" height="{{ self.height}}" style="width:100%" allowfullscreen frameborder="0"></iframe>
+    </div>
+{% else %}
     {% if self.column_width == 'column-width' %}
         <div class="block-iframe__max-bounds-container" style="max-width:{{ self.width }}px; max-height:{{ self.height }}px;">
             <div class="block-iframe__responsive-container" style="padding-bottom: {{ height_width_ratio }}%">
@@ -16,8 +20,4 @@
             </div>
         </div>
     {% endif %}
-{% else %}
-    <div class="wrapper--streamfield-block {{ self.column_width }}">
-        <iframe src="{{ self.source_url|noShowTableauHome }}" height="{{ self.height}}" style="width:100%" allowfullscreen frameborder="0"></iframe>
-    </div>
 {% endif %}
