Add fixed-height option for iframe (#1786)

--- a/newamericadotorg/templates/blocks/iframe.html
+++ b/newamericadotorg/templates/blocks/iframe.html
@@ -2,16 +2,22 @@
 {% load noShowTableauHome from utilities %}
 
 {% widthratio self.height self.width 100 as height_width_ratio %}
-{% if self.column_width == 'column-width' %}
-    <div class="block-iframe__max-bounds-container" style="max-width:{{ self.width }}px; max-height:{{ self.height }}px;">
-        <div class="block-iframe__responsive-container" style="padding-bottom: {{ height_width_ratio }}%">
-            <iframe src="{{ self.source_url|noShowTableauHome }}" allowfullscreen frameborder="0"></iframe>
-        </div>
+{% if self.fixed_height %}
+    <div class="wrapper--streamfield-block {{ self.column_width }}">
+        <iframe src="{{ self.source_url|noShowTableauHome }}" height="{{ self.height}}" style="width:100%" allowfullscreen frameborder="0"></iframe>
     </div>
 {% else %}
-    <div class="wrapper--streamfield-block {{ self.column_width }}" style="max-height:{{ self.height }}px;">
-        <div class="block-iframe__responsive-container" style="max-width:{{ self.width }}px; padding-bottom: {{ height_width_ratio }}%">
-            <iframe src="{{ self.source_url|noShowTableauHome }}" allowfullscreen frameborder="0"></iframe>
+    {% if self.column_width == 'column-width' %}
+        <div class="block-iframe__max-bounds-container" style="max-width:{{ self.width }}px; max-height:{{ self.height }}px;">
+            <div class="block-iframe__responsive-container" style="padding-bottom: {{ height_width_ratio }}%">
+                <iframe src="{{ self.source_url|noShowTableauHome }}" allowfullscreen frameborder="0"></iframe>
+            </div>
         </div>
-    </div>
+    {% else %}
+        <div class="wrapper--streamfield-block {{ self.column_width }}" style="max-height:{{ self.height }}px;">
+            <div class="block-iframe__responsive-container" style="max-width:{{ self.width }}px; padding-bottom: {{ height_width_ratio }}%">
+                <iframe src="{{ self.source_url|noShowTableauHome }}" allowfullscreen frameborder="0"></iframe>
+            </div>
+        </div>
+    {% endif %}
 {% endif %}
