--- a/newamericadotorg/assets/scss/_mixins.scss
+++ b/newamericadotorg/assets/scss/_mixins.scss
@@ -21,7 +21,7 @@ $colors: (
   turquoise: (
     base: #2ebcb3,
     light: #46ccc3,
-    dark: #25837D
+    dark: #007E76
   ),
   blue: (
     base: #10355F
