Wire up modals for home page and program page subscriptions

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -91,15 +91,7 @@
 						<span><em>Be the first to hear about the latest events and research from New America.</em></span>
 					</div>
 				</h3>
-				<div class="homepage__subscribe-section__email-input margin-top-35">
-					<div class="input">
-						<form action="/subscribe/?email=value" method="get">
-							<input type="text" name="email" required/>
-							<label class="input__label" for="email"><h5 class="margin-0">Email Address</h5></label>
-							<button type="submit" class="button--text input__submit with-caret--right">Go</button>
-						</form>
-					</div>
-				</div>
+                <div id="na-react__home-subscribe" class="margin-top-35" data-meta="{{ meta }}"></div>
 			</span>
 		</div>
 	</section>
