--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -79,21 +79,7 @@
 		</div>
 	</section>
 	<section class="container--full-width beige homepage__subscribe-section scroll-target" data-scroll-trigger-point="bottom" data-scroll-top-offset="25vh">
-		<div class="container">
-			<span class="homepage__promo-link">
-				<h1 class="promo margin-0">
-					<div class="block">
-						<span><em>Stay in touch</em></span>
-					</div>
-				</h1>
-				<h3 class="margin-top-35 margin-bottom-0">
-					<div class="block">
-						<span><em>Be the first to hear about the latest events and research from New America.</em></span>
-					</div>
-				</h3>
-                <div id="na-react__home-subscribe" class="margin-top-35" data-meta="{{ meta }}"></div>
-			</span>
-		</div>
+		<div id="na-react__home-subscribe" data-meta="{{ meta }}"></div>
 	</section>
 </main>
 {% endblock %}
