Add facebook domain verification

--- a/newamericadotorg/templates/base.html
+++ b/newamericadotorg/templates/base.html
@@ -30,6 +30,7 @@
   <link rel="shortcut icon" href="<%=htmlWebpackPlugin.options.extraStaticUrl%>/favicon.ico" type="image/x-icon">
   <link rel="icon" href="<%=htmlWebpackPlugin.options.extraStaticUrl%>/favicon.ico" type="image/x-icon">
   <meta property="og:site_name" content="New America" />
+  <meta name="facebook-domain-verification" content="c4fr8x6czr25bt4ecip5z443p97jey" />
 
   <link rel="canonical" href="{{ page.full_url }}" />
   <meta property="og:url" content="{{ page.full_url }}">
