--- a/home/templates/home/subscribe_page.html
+++ b/home/templates/home/subscribe_page.html
@@ -10,7 +10,7 @@
     <section class="home__panel__subscribe col-12 margin-top-80 margin-bottom-35">
       <div class="row gutter-20">
         <div class="home__heading__text col-lg-9">
-          <h1 class="promo margin-25">Subscribe</h1>
+          <h1 class="promo margin-25">{{ page.title }}</h1>
           {{ page.page_description|richtext }}
         </div>
       </div>
