--- a/newamericadotorg/assets/scss/components/form/_inputs.scss
+++ b/newamericadotorg/assets/scss/components/form/_inputs.scss
@@ -50,7 +50,7 @@ input[type="text"], textarea {
 	}
 	input[type="text"]:active + label,
 	input[type="text"]:focus + label,
-	input[type="text"]:valid + label,
+	input[type="text"]:required:valid + label,
 	textarea:active + label,
 	textarea:focus + label,
 	textarea:valid + label {
@@ -64,6 +64,10 @@ input[type="text"], textarea {
 		right: 5px;
 		z-index: 2;
 	}
+}
+
+.required-asterisk {
+  color: color(red);
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
