Add background color to boxes in rendered report PDFs
This uses `box-decoration-break: clone` to make it visually nicer
around page breaks.

--- a/report/templates/report/pdf_style.html
+++ b/report/templates/report/pdf_style.html
@@ -237,9 +237,9 @@
 
     .block-box{
       margin: 35pt 0;
-      padding: 25pt 0;
-      border-top: 1pt solid #000;
-      border-bottom: 1pt solid #000;
+      padding: 25pt 25pt;
+      background-color: #f5f5f5;
+      box-decoration-break: clone;
     }
 
     .block-box h5{
