Make `BoxBlock.title` a non-required field

--- a/newamericadotorg/templates/blocks/box.html
+++ b/newamericadotorg/templates/blocks/box.html
@@ -1,7 +1,9 @@
 {% load wagtailcore_tags %}
 {% load cited_html %}
 <div class="block-box">
+  {% if value.title %}
   <h5>→&nbsp;{{value.title}}</h5>
+  {% endif %}
   {% for block in value.body %}
       {% if block.block_type == 'paragraph' %}
         <div class="block-{{ block.block_type }}">
