--- a/newamericadotorg/assets/react/report/components/TopNav.scss
+++ b/newamericadotorg/assets/react/report/components/TopNav.scss
@@ -54,6 +54,10 @@
     border-right: 1px solid #cdcdcd;
     padding-right: 15px;
 
+    a:hover {
+      color: color(turquoise);
+    }
+
     @include media-breakpoint(tablet){
       max-width: 500px;
       display: inline-block;
