--- a/newamericadotorg/templates/components/report_section_body.html
+++ b/newamericadotorg/templates/components/report_section_body.html
@@ -1,12 +1,16 @@
 {% load wagtailcore_tags %}
-{% load cited_html %}
+{% load cited_html anchorize_headings %}
 {% for block in value.body %}
     {% if block.block_type == 'paragraph' %}
-      <div class="block-{{ block.block_type }}">
-        {{ block.value|cited_html|safe }}
-      </div>
+        <div class="block-{{ block.block_type }}">
+            {% filter anchorize_headings %}
+                {{ block.value|cited_html|safe }}
+            {% endfilter %}
+        </div>
     {% elif block.block_type == 'inline_image' or block.block_type == 'box' %}
-      {% include_block block %}
+        {% filter anchorize_headings %}
+            {% include_block block %}
+        {% endfilter %}
     {% else %}
       <div class="block-{{ block.block_type }}">
         {% include_block block %}
