--- a/report/templates/report/pdf_style.html
+++ b/report/templates/report/pdf_style.html
@@ -256,6 +256,12 @@
       margin-bottom: 0;
     }
 
+    .block-box > *:first-child,
+    .block-box > *:first-child > *:first-child,
+    .block-box > *:first-child > *:first-child > *:first-child{
+      margin-top: 0;
+    }
+
     .block-box blockquote{
       font-family: 'Circular', 'SimHei';
     }
